--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-practice 2 <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -12,7 +12,7 @@ practice 2 <!DOCTYPE html>
 
     <div class="main">
         <nav>
-            <span><img width="53" src="assets/images1/logo.svg" alt=""></span>
+            <span><img width="53" src="logo.svg" alt=""></span>
             <div>
                 <button class="btn">English</button>
                 <button class="btn btn-red-sm">Sign In</button>
